# CLIP-ONNX-AX650-CPP

./: .gitignore  CMakeLists.txt  README.md  cn_text.txt  cn_text_mix.txt  submodule.sh  text.txt  text_bin.txt  text_video.txt
qtproj/: .gitignore
qtproj/CLIPQT/: CMakeLists.txt  internal_func.cpp  internal_func.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
qtproj/CLIPQT_VideoAnalyst/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myqlabel.h  submodule.sh
src/: main.cpp  main_video.cpp  tableprinter.hpp
src/Runner/: CLIP.hpp  CLIPAX650.hpp  CLIPOnnx.hpp  Tokenizer.hpp  ax_model_runner_ax650.cpp
src/Runner/OnnxWarpper/: OnnxWarpper.hpp
